# clock-cli-rs

./: CHANGELOG.md  Cargo.toml  README.md
scripts/: update_librs_doc.py
src/: core.rs  lib.rs  main.rs  notify.rs  tui.rs  utils.rs
src/core/: countdown.rs  stopwatch.rs
src/tui/: countdown.rs  stopwatch.rs  timer.rs
